_scss/about.scss
/* ... */
.background-card {
    padding: 10px 20px;
}

.card-wrapper {
    padding: 5px;
}

@media (max-width: 992px) {
    body {
        background: #fff;
    }

    .card-wrapper {
        float: none !important;
    }
}

.text-bolder {
    font-weight: 700;
}

.background-details .detail {
    display: table;
    padding: 5px 0;
}

.background-details .detail .icon {
    min-width: 45px;
    max-width: 45px;
    text-align: center;
}

.background-details .detail .info {
    width: 100%;
}

.background-details .detail .icon {
    color: #0f4471;
}

.background-details .detail .title {
    border-bottom: 1px solid #e6e6e6;
    border-radius: 3px;
    padding-bottom: 5px;
    color: #000;
}

.background-details .detail .mobile-title {
    display: none;
}

@media (max-width: 480px) {
    .background-details .detail .mobile-title {
        display: inline-block;
        margin-left: 5px;
        font-weight: 700;
        text-transform: uppercase;
        vertical-align: middle;
    }
}

.background-details .detail .icon,
.background-details .detail .info {
    display: table-cell;
    padding: 0 10px;
}

@media (max-width: 480px) {
    .background-details .detail {
        display: block;
    }

    .background-details .detail .icon {
        max-width: inherit;
        min-width: inherit;
        text-align: left;
    }

    .background-details .detail .icon,
    .background-details .detail .info {
        display: block;
        padding: 10px 0;
    }

    .background-details .detail .title {
        display: none;
    }
}

@media (max-width: 480px) {
    ul {
        padding-left: 15px;
    }
}

.current-event {
    font-size: 8px;
    color: #5ACE24;
    position: absolute;
    right: 100%;
    top: 8px;
    left: -10px;
}

.previous-event {
    font-size: 8px;
    color: #2f4780;
    position: absolute;
    right: 100%;
    top: 8px;
    left: -10px;
}

.floating-nav-trigger {
    width: 50px;
    height: 50px;
    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
    -webkit-transition: background-color .5s ease;
    -o-transition: background-color .5s ease;
    transition: background-color .5s ease;
    display: block;
    border-radius: 50%;
    text-align: center;
    padding-top: 10px;
    background-color: #fff;
    font-size: 1.5em;
    color: #357ebd;
    z-index: 100;
    position: fixed;
    bottom: 10px;
    right: 10px;
}

.floating-nav-trigger .close-icon {
    display: none;
}

.floating-nav-trigger.is-open {
    -webkit-box-shadow: none;
    box-shadow: none;
}

.floating-nav-trigger.is-open .close-icon {
    display: inherit;
}

.floating-nav-trigger.is-open:hover {
    background-color: #fff;
}

.floating-nav {
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    -o-transform: scale(0);
    transform: scale(0);
    -webkit-transform-origin: 100% 100%;
    -moz-transform-origin: 100% 100%;
    -ms-transform-origin: 100% 100%;
    transform-origin: 100% 100%;
    -webkit-transition: transform 0.3s, visibility 0s 0.3s;
    -o-transition: transform 0.3s, visibility 0s 0.3s;
    transition: transform 0.3s, visibility 0s 0.3s;
    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.24);
    position: fixed;
    z-index: 50;
    right: 10px;
    bottom: 10px;
    background-color: #fff;
    width: 90%;
    max-width: 400px;
    visibility: hidden;
    overflow: hidden;
}

.floating-nav ul {
    font-size: 1.2em;
    margin: 0;
}

.floating-nav ul li {
    border-bottom: 1px solid #eff2f6;
}

.floating-nav ul li a {
    padding: 20px;
    text-decoration: none;
    color: #357ebd;
    display: block;
}

.floating-nav ul li a:hover {
    color: #1f496e;
}

.floating-nav ul li i.fa {
    margin-right: 10px;
}

.floating-nav ul li:last-child {
    border-bottom: 0;
}

.floating-nav.is-visible {
    -webkit-transform: scale(1);
    -ms-transform: scale(1);
    -o-transform: scale(1);
    transform: scale(1);
    -webkit-transition: transform 0.3s, visibility 0s 0s;
    -o-transition: transform 0.3s, visibility 0s 0s;
    transition: transform 0.3s, visibility 0s 0s;
    visibility: visible;
}

@media (max-width: 992px) {
    .profile-card-wrapper {
        position: relative;
    }
}

.profile-pic {
    padding: 20px 0;
}

.profile-left {
    margin-left: 12px;
}

@media (max-width: 992px) {
    .profile-pic {
        padding: 10px 0;
    }
}

.profile-pic img {
    width: 160px;
    height: 160px;
}

@media (max-width: 992px) {
    .name {
        margin-top: 10px;
    }
}

@media (max-width: 768px) {
    .contact-details {
        text-align: center;
    }
}

.contact-details .detail {
    display: table;
    padding: 10px 0;
}

.contact-details .detail .icon {
    padding: 0 10px;
    color: #0f4471;
}

.contact-details .icon {
    color: #0f4471;
}

.contact-details .detail .info {
    font-size: 1em;
}

.contact-details .detail .icon,
.contact-details .detail .info {
    display: table-cell;
    vertical-align: middle;
}

@media (max-width: 768px) {
    .contact-details .detail {
        position: relative;
        float: left;
        width: 100%;
        min-height: 1px;
        padding-left: 15px;
        padding-right: 15px;
    }
}

@media (max-width: 992px) {
    .contact-details .detail {
        position: relative;
        min-height: 1px;
        padding: 10px;
    }

    .contact-details .detail .icon,
    .contact-details .detail .info {
        display: inline-block;
    }
}

@media (max-width: 992px) {
    .contact-details {
        display: table;
        margin: auto;
    }

    .detail {
        float: left;
        display: table-cell;
    }
}

.social-links {
    line-height: 2.5;
}

.social-link {
    margin-left: 5px;
    min-width: 35px;
    display: inline-block;
}

.social-link:first-child {
    margin-left: 0;
}

.social-link:hover {
    text-decoration: none;
}

.link-github {
    color: #454545;
}
/* ... */

